# sony-restock-checker

./: .gitignore  product_list.json  pyproject.toml
.github/workflows/: check_restock.yml
src/: main.py  utils.py
